--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "wt serve --hostname localhost --port 3000 --secrets-file .secrets .",
     "create": "wt create -b --name=movie-sms --secrets-file .secrets .",
-    "cron": "wt cron create --schedule \"0 19 * * 5\" --tz America/Denver -b --name=movie-sms --secrets-file .secrets ."
+    "cron": "wt cron create --schedule \"0 19 * * 5\" --tz America/Denver -b --name=movie-sms --secrets-file .secrets .",
+    "release": "standard-version"
   },
   "dependencies": {
     "lodash": "^4.17.10",
@@ -18,6 +19,7 @@
     "twilio": "^3.18.0"
   },
   "devDependencies": {
+    "standard-version": "^4.4.0",
     "wt-cli": "^10.0.3"
   }
 }
